food-bank: CSS fix to align items

--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -1,5 +1,3 @@
-
-
 .controls{
   display: flex;
   justify-content: space-around;
@@ -16,6 +14,7 @@
     font-weight: 600;
     color: white;
     background: radial-gradient(circle, rgb(140 140 140) 0%, rgb(66 66 66) 100%);
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
     text-shadow: 3px 4px 5px #212121;
   }
   
@@ -33,6 +32,10 @@
     font-weight: 600;
     background: radial-gradient(circle, #2cc429 0%, #236213 100%);
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+  }
+
+  .buttons{
+    cursor: pointer;
   }
 
   .buttons:hover{
