--- a/src/styles/foodbank.css
+++ b/src/styles/foodbank.css
@@ -16,13 +16,11 @@
 
 #food-bank {
   display: grid;
-
   grid-template-columns: repeat(3, 1fr);
-  width: 18vw;
-  height: 37vh;
-
-  border: 0;
-  background-color: transparent;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 
@@ -30,6 +28,7 @@
   padding: 20px;
   border: 0;
   background-color: transparent;
+  text-align: center;
 }
 
 #food-bank > li > img {
